<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorwhite">

    <!--cuSkills= create update objective-->
    <TextView
        android:id="@+id/tv_cuAdd_DiscountAmount_heading0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorbg"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/discount"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_cu_Amount_heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:text="@string/amount"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cuAdd_DiscountAmount_heading0" />

    <EditText
        android:id="@+id/tied_cuAdd_discountAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/prs0_00"
        android:inputType="number"
        android:maxWidth="380dp"
        android:paddingStart="50dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cuAdd_DiscountAmount_heading0" />

    <TextView
        android:id="@+id/tv_cu_UsePercentage_heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/use_percentage"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cu_Amount_heading1" />


    <CheckBox
        android:id="@+id/checkbox_cuAdd_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tied_cuAdd_discountAmount" />

    <TextView
        android:id="@+id/btn_cuD_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorwhite"
        android:padding="15dp"
        android:text="@string/cancle"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cu_UsePercentage_heading1" />

    <TextView
        android:id="@+id/btn_cuD_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorwhite"
        android:padding="15dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cu_UsePercentage_heading1" />

</androidx.constraintlayout.widget.ConstraintLayout>